# template-sdl2

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
